tests/loops/valid/return_in_while.su
s32 main() {
    while (1) {
        return 2;
    }
}