tests/loops/invalid/break_not_in_loop.su
s32 main() {
    break;
}